Update link back to homepage

--- a/pages/code-partner-leo.html
+++ b/pages/code-partner-leo.html
@@ -78,7 +78,7 @@
         <div class="content-container">
             <div class="banner">
                 Go <span class="letter-800"> check</span><span class="letter-700"> out </span><span class="letter-600"> my </span><span class="letter-500"> human </span><span class="letter-400">?</span>
-                <h4><a href="../index.html" target="_self">learn about leo's human . . .</a></h4>
+                <h4><a href="https://taminderpabla.com/" target="_self">learn about leo's human . . .</a></h4>
             </div>
         </div>
     </div>
