--- a/pages/more-info.html
+++ b/pages/more-info.html
@@ -12,8 +12,14 @@
     <link rel="stylesheet" type="text/css" href="../css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
     <!-- search engine optimization -->
+    <meta name="title" content="Transition Page - Taminder Pabla">
     <meta name="description" content="Simple transition page between Taminder Pabla's portfolio and his adorable dog's portfolio page.">
-    <!-- open graph: whoever is sharing this page on social media, give me a break -->
+    <!-- open graph -->
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="More Info Transition | Taminder Pabla">
+    <meta property="og:url" content="https://taminderpabla.com/more-info">
+    <meta property="og:description" content="Personal portfolio website of Taminder Pabla. A sofware engineer. Learn about his coding buddy Leo.">
+    <!-- whoever is sharing this page on social, give me a break -->
 </head>
 <body>
     <div class="body-container">
