--- a/index.html
+++ b/index.html
@@ -12,21 +12,20 @@
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
     <!-- search engine optimization -->
+    <meta name="title" content="Taminder Pabla">
     <meta name="description" content="Personal portfolio website of Taminder Pabla. A software engineer.">
-    <meta itemprop="name" content="Taminder Pabla">
-    <meta itemprop="description" content="Personal portfolio website of Taminder Pabla. A software engineer.">
-    <meta itemprop="image" content="images/taminderpabla.jpg">
     <!-- open graph -->
-    <meta property="og:title" content="Taminder Pabla"/>
-    <meta property="og:description" content="Personal portfolio website of Taminder Pabla. A sofware engineer."/>
-    <meta property="og:url" content="https://taminderpabla.com"/>
-    <meta property="og:image" content="images/favicon.png"/>
-    <meta name="image" property="og:image" content="images/favicon.png">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Taminder Pabla">
+    <meta property="og:url" content="https://taminderpabla.com/">
+    <meta property="og:description" content="Personal portfolio website of Taminder Pabla. A sofware engineer.">
+    <meta property="og:image" content="https://taminderpabla.com/images/favicon.png">
     <!-- twitter -->
     <meta name="twitter:card" content="summary">
+    <meta name="twitter:url" content="https://taminderpabla.com/">
     <meta name="twitter:title" content="Taminder Pabla">
     <meta name="twitter:description" content="Personal portfolio website of Taminder Pabla">
-    <meta name="twitter:image" content="images/taminderpabla.png ">
+    <meta name="twitter:image" content="https://taminderpabla.com/images/taminderpabla.jpg">
 </head>
 <body>
     <!-- header -->
