--- a/pages/code-partner-leo.html
+++ b/pages/code-partner-leo.html
@@ -12,16 +12,14 @@
     <link rel="stylesheet" type="text/css" href="../css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
     <!-- search engine optimization -->
+    <meta name="title" content="Leo. The Code buddy - Taminder">
     <meta name="description" content="Personal portfolio website of Taminder Pabla. A software engineer. Learn about his coding buddy Leo.">
-    <meta itemprop="name" content="Leo. The Code Buddy. | Taminder Pabla">
-    <meta itemprop="description" content="Personal portfolio website of Taminder Pabla. A software engineer. Learn about his coding buddy Leo.">
-    <meta itemprop="image" content="../images/grumpy_leo.png">
-    <!-- open graph tags -->
-    <meta property="og:title" content="Leo. Code The Buddy | Taminder Pabla"/>
-    <meta property="og:description" content="Personal portfolio website of Taminder Pabla. A sofware engineer. Learn about his coding buddy Leo."/>
-    <meta property="og:url" content="https://taminderpabla.com/code-partner-leo"/>
-    <meta property="og:image" content="../images/grumpy_leo.png"/>
-    <meta name="image" property="og:image" content="../images/grumpy_leo.png">
+    <!-- open graph -->
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Leo. Code The Buddy | Taminder Pabla">
+    <meta property="og:url" content="https://taminderpabla.com/code-partner-leo">
+    <meta property="og:description" content="Personal portfolio website of Taminder Pabla. A sofware engineer. Learn about his coding buddy Leo.">
+    <meta property="og:image" content="https://taminderpabla.com/images/grumpy_leo.png">
 </head>
 <body>
     <!-- header -->
