Fix open graph url meta tag

--- a/pages/more-info.html
+++ b/pages/more-info.html
@@ -17,7 +17,7 @@
     <!-- open graph -->
     <meta property="og:type" content="website">
     <meta property="og:title" content="More Info Transition | Taminder Pabla">
-    <meta property="og:url" content="https://taminderpabla.com/more-info">
+    <meta property="og:url" content="https://taminderpabla.com/pages/more-info.html">
     <meta property="og:description" content="Personal portfolio website of Taminder Pabla. A sofware engineer. Learn about his coding buddy Leo.">
     <!-- whoever is sharing this page on social, give me a break -->
 </head>
