Fix open graph url meta tag

--- a/pages/code-partner-leo.html
+++ b/pages/code-partner-leo.html
@@ -17,7 +17,7 @@
     <!-- open graph -->
     <meta property="og:type" content="website">
     <meta property="og:title" content="Leo. Code The Buddy | Taminder Pabla">
-    <meta property="og:url" content="https://taminderpabla.com/code-partner-leo">
+    <meta property="og:url" content="https://taminderpabla.com/pages/code-partner-leo.html">
     <meta property="og:description" content="Personal portfolio website of Taminder Pabla. A sofware engineer. Learn about his coding buddy Leo.">
     <meta property="og:image" content="https://taminderpabla.com/images/grumpy_leo.png">
 </head>
