Change open graph url

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <meta property="og:title" content="Taminder Pabla">
     <meta property="og:url" content="https://taminderpabla.com/">
     <meta property="og:description" content="Personal portfolio website of Taminder Pabla. A sofware engineer.">
-    <meta property="og:image" content="https://taminderpabla.com/images/favicon.png">
+    <meta property="og:image" content="https://taminderpabla.com/images/taminderpabla.jpg">
     <!-- twitter -->
     <meta name="twitter:card" content="summary">
     <meta name="twitter:url" content="https://taminderpabla.com/">
