Fix sequentially-descending order of heading elements

--- a/index.html
+++ b/index.html
@@ -68,12 +68,12 @@
         </div>
         <!-- insert new projects here you buffoon -->
         <div class="content-container">
-            <h3>09/2022 </h3>
+            <p class="project-dates">09/2022 </p>
             <h2><a href="https://github.com/taminderpabla/tic-tac-toe" target="_blank">Tic Tac Toe</a></h2>
             <p>Game Project: Tradition player-vs-player Tic-Tac-Toe with score tracking.</p>
         </div>
         <div class="content-container">
-            <h3>07/2022</h3>
+            <p class="project-dates">07/2022</p>
             <h2><a href="https://github.com/taminderpabla/simple-bot" target="_blank" >Simple Bot</a></h2>
             <p>Learning Project: Developing fundamental Java skills.</p>
         </div>
@@ -84,7 +84,8 @@
         <div class="content-container">
             <div class="banner">
                 what <span class="letter-800"> more</span><span class="letter-700"> do you </span><span class="letter-600"> need </span><span class="letter-500"> to </span><span class="letter-400">know?</span>
-                <h4><a href="pages/more-info.html" target="_self">some more info . . .</a></h4>
+                <br>
+                <a class="learn-more" href="pages/more-info.html" target="_self">some more info . . .</a>
             </div>
         </div>
     </div>
