--- a/pages/code-partner-leo.html
+++ b/pages/code-partner-leo.html
@@ -60,12 +60,12 @@
         </div>
         <!-- insert new project here you buffoon -->
         <div class="content-container">
-            <h3>work in-progress</h3>
+            <p class="project-dates">work in-progress</p>
             <h2>Treat Fetcher-3000</h2>
             <p>Dream Project: Humanoid robot that fetches treats from high places or closed cabinets.</p>
         </div>
         <div class="content-container">
-            <h3>09/2018</h3>
+            <p class="project-dates">09/2018</p>
             <h2>Hello World</h2>
             <p>Life Project: When I took my first breath.</p>
         </div>
@@ -76,7 +76,8 @@
         <div class="content-container">
             <div class="banner">
                 Go <span class="letter-800"> check</span><span class="letter-700"> out </span><span class="letter-600"> my </span><span class="letter-500"> human </span><span class="letter-400">?</span>
-                <h4><a href="https://taminderpabla.com/" target="_self">learn about leo's human . . .</a></h4>
+                <br>
+                <a class="learn-more" href="https://taminderpabla.com/" target="_self">learn about leo's human . . .</a>
             </div>
         </div>
     </div>
