--- a/pages/more-info.html
+++ b/pages/more-info.html
@@ -27,7 +27,8 @@
             <div class="banner">
                 so <span class="letter-800"> you</span><span class="letter-700"> really </span><span class="letter-600"> need </span><span class="letter-500"> more </span><span class="letter-400">info?</span>
 
-                <h4><a href="code-partner-leo.html" target="_self">still <b>NEED</b> more info . . .</a></h4>
+                <br>
+                <a class="learn-more" href="code-partner-leo.html" target="_self">still <strong>NEED</strong> more info . . .</a>
             </div>
         </div>
     </div>
