Add semantic structure elements

--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
         </nav>
 	</header>
     <!-- page content -->
-    <div class="body-container">
+    <main>
         <div class="page-divider">
             <h1>About</h1>
         </div>
-        <div class="content-container">
+        <section>
             <div class="picture-container">
                 <img src="images/taminderpabla.jpg" alt="Picture of Taminder generated using AI.">
             </div>
@@ -61,34 +61,34 @@
             <p class="bullet-points"><b>GOAL: </b> Seeking an entry-level CO-OP position</p>
             <p class="bullet-points"><b>PRESENT: </b> Battling bugs</p>
             <p class="bullet-points"><b>PAST: </b> Problem Solver Assistant @ Amazon Fulfillment Center</p>
-        </div>
+        </section>
         <!-- projects -->
         <div class="page-divider">
             <h1>Projects</h1>
         </div>
         <!-- insert new projects here you buffoon -->
-        <div class="content-container">
+        <section>
             <p class="project-dates">09/2022 </p>
             <h2><a href="https://github.com/taminderpabla/tic-tac-toe" target="_blank">Tic Tac Toe</a></h2>
             <p>Game Project: Tradition player-vs-player Tic-Tac-Toe with score tracking.</p>
-        </div>
-        <div class="content-container">
+        </section>
+        <section>
             <p class="project-dates">07/2022</p>
             <h2><a href="https://github.com/taminderpabla/simple-bot" target="_blank" >Simple Bot</a></h2>
             <p>Learning Project: Developing fundamental Java skills.</p>
-        </div>
+        </section>
         <!-- end of site content -->
         <div class="page-divider">
             <h1>More Info</h1>
         </div>
-        <div class="content-container">
+        <section>
             <div class="banner">
                 what <span class="letter-800"> more</span><span class="letter-700"> do you </span><span class="letter-600"> need </span><span class="letter-500"> to </span><span class="letter-400">know?</span>
                 <br>
                 <a class="learn-more" href="pages/more-info.html" target="_self">some more info . . .</a>
             </div>
-        </div>
-    </div>
+        </section>
+    </main>
     <!-- footer -->
     <footer>
         <nav>
