--- a/pages/code-partner-leo.html
+++ b/pages/code-partner-leo.html
@@ -40,11 +40,11 @@
         </nav>
 	</header>
     <!-- page content -->
-    <div class="body-container">
+    <main>
         <div class="page-divider">
             <h1>Leo - Coding Assistant</h1>
         </div>
-        <div class="content-container">
+        <section>
             <div class="picture-container">
                 <img src="../images/grumpy_leo.png" alt="Picture of Leo the dog.">
             </div>
@@ -53,34 +53,34 @@
             <p class="bullet-points"><b>GOAL: </b> Hire human to reach treat cabinet</p>
             <p class="bullet-points"><b>PRESENT: </b> Watching dad battle bugs</p>
             <p class="bullet-points"><b>PAST: </b> Losing sleep due to dad's keyboard and mouse clicks</p>
-        </div>
+        </section>
         <!-- projects -->
         <div class="page-divider">
             <h1>Projects</h1>
         </div>
         <!-- insert new project here you buffoon -->
-        <div class="content-container">
+        <section>
             <p class="project-dates">work in-progress</p>
             <h2>Treat Fetcher-3000</h2>
             <p>Dream Project: Humanoid robot that fetches treats from high places or closed cabinets.</p>
-        </div>
-        <div class="content-container">
+        </section>
+        <section>
             <p class="project-dates">09/2018</p>
             <h2>Hello World</h2>
             <p>Life Project: When I took my first breath.</p>
-        </div>
+        </section>
         <!-- end of site content -->
         <div class="page-divider">
             <h1>More Info</h1>
         </div>
-        <div class="content-container">
+        <section>
             <div class="banner">
                 Go <span class="letter-800"> check</span><span class="letter-700"> out </span><span class="letter-600"> my </span><span class="letter-500"> human </span><span class="letter-400">?</span>
                 <br>
                 <a class="learn-more" href="https://taminderpabla.com/" target="_self">learn about leo's human . . .</a>
             </div>
-        </div>
-    </div>
+        </section>
+    </main>
     <!-- footer -->
     <footer>
         <nav>
