--- a/pages/more-info.html
+++ b/pages/more-info.html
@@ -22,7 +22,7 @@
     <!-- whoever is sharing this page on social, give me a break -->
 </head>
 <body>
-    <div class="body-container">
+    <main>
         <div class="content-container">
             <div class="banner">
                 so <span class="letter-800"> you</span><span class="letter-700"> really </span><span class="letter-600"> need </span><span class="letter-500"> more </span><span class="letter-400">info?</span>
@@ -31,6 +31,6 @@
                 <a class="learn-more" href="code-partner-leo.html" target="_self">still <strong>NEED</strong> more info . . .</a>
             </div>
         </div>
-    </div>
+    </main>
 </body>
 </html>
