--- a/index.html
+++ b/index.html
@@ -85,7 +85,8 @@
             <div class="banner">
                 what <span class="letter-800"> more</span><span class="letter-700"> do you </span><span class="letter-600"> need </span><span class="letter-500"> to </span><span class="letter-400">know?</span>
                 <br>
-                <a class="learn-more" href="pages/more-info.html" target="_self">some more info . . .</a>
+                <button><a class="learn-more" href="pages/more-info.html" target="_self">click me</a></button>
+                <a class="learn-more" href="pages/more-info.html" target="_self">for more info . . .</a>
             </div>
         </section>
     </main>
