Fix alignments of buttons and more-info page

--- a/pages/code-partner-leo.html
+++ b/pages/code-partner-leo.html
@@ -77,9 +77,8 @@
             <div class="banner">
                 Go <span class="letter-800"> check</span><span class="letter-700"> out </span><span class="letter-600"> my </span><span class="letter-500"> human </span><span class="letter-400">?</span>
                 <br>
-                <a class="learn-more" href="https://taminderpabla.com/" target="_self">learn about leo's human . . .</a>
-                <br>
                 <button><a class="learn-more" href="https://taminderpabla.com/" target="_self">click me</a></button>
+                <a class="learn-more" href="https://taminderpabla.com/" target="_self">for leo's human. . .</a>
             </div>
         </section>
     </main>
