--- a/pages/more-info.html
+++ b/pages/more-info.html
@@ -22,15 +22,12 @@
     <!-- whoever is sharing this page on social, give me a break -->
 </head>
 <body>
-    <main>
-        <div class="content-container">
-            <div class="banner">
-                so <span class="letter-800"> you</span><span class="letter-700"> really </span><span class="letter-600"> need </span><span class="letter-500"> more </span><span class="letter-400">info?</span>
-                <br>
-                <a class="learn-more" href="code-partner-leo.html" target="_self">still <strong>NEED</strong> more info . . .</a>
-                <br>
-                <button><a class="learn-more" href="code-partner-leo.html" target="_self">click me</a></button>
-            </div>
+    <main class="content-center">
+        <div class="banner">
+            <span class="letter-800"> you</span><span class="letter-700"> really </span><span class="letter-600"> need </span><span class="letter-500"> more </span><span class="letter-400">info?</span>
+            <br>
+            <button><a class="learn-more" href="code-partner-leo.html" target="_self">click me</a></button>
+            <a class="learn-more" href="code-partner-leo.html" target="_self">if you still <strong>NEED</strong> info. . .</a>
         </div>
     </main>
 </body>
